<?xml version="1.0"?>
<package format="3">
  <name>nematode_ros2</name>
  <version>0.1.0</version>
  <description>NemaTode package for ROS2 integration</description>
  <maintainer email="gilbert@missionrobotics.us">gilborty</maintainer>
  <url type="repository">https://github.com/gilborty/NemaTode</url>

  <license>ZLib license</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>